# my-multi-auth

./: Cargo.toml
migrations/: 20240130000523_create_users_table.sql
src/: main.rs  validation.rs
src/handlers/: user_handler.rs
src/models/: user.rs
templates/: base.j2
templates/auth/: login.j2
