[package]
name = "my-multi-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
cargo-watch = "8.5.2"
dotenvy = "0.15.7"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["postgres","macros","runtime-async-std"] }
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
tower-sessions = "0.10.1"
tower-sessions-redis-store = "0.10.0"
